test/parser/prs/after-01.stderr
At: "after-01.hac":7:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: defproc [4:1..7]
#STATE#	identifier: aftershave [4:9..18]
#STATE#	list<(port-formal-decl)>: ... [4:19..20]
#STATE#	{ [4:22]
#STATE#	list<(def-body-item)>: (instance-decl) ... [5:1..9]
#STATE#	keyword: prs [6:1..3]
#STATE#	{ [6:5]
#STATE#	identifier: after [7:1..5]
#STATE#	int: 12 [7:7]
in state #STATE#, possible rules are:
	relative_member_index_expr : ID .  (#RULE#)
	local_index_expr : ID . sparse_range_list  (#RULE#)
	local_member_expr : ID . '.' ID  (#RULE#)
acceptable tokens are: 
	'&' (reduce)
	'(' (reduce)
	')' (reduce)
	'+' (reduce)
	'-' (reduce)
	'.' (shift)
	'<' (reduce)
	'[' (shift)
	'|' (reduce)
	IMPLIES (reduce)
	RARROW (reduce)
