test/parser/prs/after-01.hac
// "after-01.hac"
// should fail, old syntax rejected

defproc aftershave() {
bool a, b;
prs {
after 12	a => b-
}
}



